syntax = "proto3";

option go_package = "golang/helloWorld;helloWorld";
package HelloWorld;

message RequestHello {
    string message_hello = 1;
}

message ResponseHello {
    string message_hello = 1;
}

service HelloWorld {
    rpc Greeting(RequestHello) returns (ResponseHello) {}
}
